@@ -15,6 +15,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Remove unused parameter from fire_bow().
+ include/sproto.h
+ server/monster.c player.c
+Nicolas Weeger 2007-08-05
+
 Remove unused parameter from fatal_signal(), make signal handlers static.
  include/sproto.h
  server/init.c
